--- a/b_css/g_flex/flex03.css
+++ b/b_css/g_flex/flex03.css
@@ -9,7 +9,8 @@ body {
 div {
   /* flex 컨테이너 */
   display: flex;
-  height: 100px;
+  flex-wrap: wrap;
+  height: 200px;
   border: 1px solid black;
 
   background-color: lightcoral;
@@ -36,6 +37,15 @@ div {
     : 1과 6이 start/end에 딱 붙음 
   */
   justify-content: space-between;
+
+  /* align-content: 속성값이 justify-content와 동일 */
+  align-content: flex-start;
+  align-content: flex-end;
+  align-content: center;
+  align-content: space-between;
+  align-content: space-around;
+  /* 기본값 */
+  align-content: stretch;
 }
 
 button {
