--- a/e_typescript/src/z_종합예제/d_work/style.css
+++ b/e_typescript/src/z_종합예제/d_work/style.css
@@ -19,7 +19,7 @@ h1 {
 
 button {
   display: inline-block;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
